--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Dave fanpage <3</title>
-  </head>
-  <body>
-    <img src="https://cdn.discordapp.com/attachments/1276116804657352779/1282639047407439914/IMG_3030.png?ex=66e01633&is=66dec4b3&hm=3428171438fa869e47a77741262207266fb34f1761f7f68235e4b95f7852e42a&">
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dave the Cactus Fanpage</title>
+    <style>
+        body {
+            background-color: black;
+            color: neon;
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+
+        .neon-text {
+            color: #00ff00;
+            font-size: 50px;
+            text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 40px #00ff00;
+        }
+
+        img {
+            width: 300px;
+            height: auto;
+            border: 5px solid #00ff00;
+            box-shadow: 0 0 20px #00ff00;
+        }
+
+        .footer {
+            margin-top: 30px;
+            color: #00ff00;
+            font-size: 20px;
+        }
+
+        a {
+            color: #00ff00;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
+        }
+    </style>
+</head>
+<body>
+    <h1 class="neon-text">Welcome to Dave's Fanpage!</h1>
+
+    <img src="/mnt/data/image.png" alt="Dave the Cactus" />
+
+    <p class="neon-text">Dave Approves!</p>
+
+    <div class="footer">
+        <p><a href="https://www.instagram.com/dave.the.cactus_?igsh=dG9semt3Ym80Zzhp&utm_source=qr" target="_blank">Follow Dave for daily cactus vibes 🌵✨</a></p>
+    </div>
+</body>
 </html>
