--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <h1 class="neon-text">Welcome to Dave's Fanpage!</h1>
 
-    <img src="/mnt/data/image.png" alt="Dave the Cactus" />
+    <img src="https://cdn.discordapp.com/attachments/1276116804657352779/1282639047407439914/IMG_3030.png?ex=66e01633&is=66dec4b3&hm=3428171438fa869e47a77741262207266fb34f1761f7f68235e4b95f7852e42a&" alt="Dave the Cactus" />
 
     <p class="neon-text">Dave Approves!</p>
 
