--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p class="neon-text">Dave Approves!</p>
 
     <div class="footer">
-        <p><a href="https://www.instagram.com/dave.the.cactus_?igsh=dG9semt3Ym80Zzhp&utm_source=qr" target="_blank">Follow Dave for daily cactus vibes 🌵✨</a></p>
+        <button><a href="https://www.instagram.com/dave.the.cactus_?igsh=dG9semt3Ym80Zzhp&utm_source=qr" target="_blank">Follow Dave for daily cactus vibes 🌵✨</a></button>
     </div>
 </body>
 </html>
